# AVR

./: CMakeLists.txt  git_rev_macro.py  info.txt  platformio.ini
cmake/: atmega1284p.cmake  avr_post.cmake  avr_pre.cmake  copyright_message.cmake  git_last_commit_sha.cmake  git_update_submodules.cmake  hoto_update_cmake_message.cmake
include/: CAN_MCP2515.h  IO_MCP23S17.h  adc.h  ebusd.h  mcp23s17.h  usart.h
src/: CAN_MCP2515.c  IO_MCP23S17.c  SPI.c  adc.c  ebusd.c  main.c  mcp23s17.c  usart.c
